navigation alignment fixed

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -23,7 +23,6 @@ body > header h1 {
   line-height: 1.2em;
   letter-spacing: -2px;
   margin-bottom: 0.1em;
-  margin-left:-30px;
 }
 
 
